// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly creates default environment if \`--env.name\` is supplied.: dev env properties 1`] = `
Env {
  "binDir": "/test/kibanaRoot/bin",
  "cliArgs": Object {
    "basePath": false,
    "cache": true,
    "dev": true,
    "disableOptimizer": true,
    "dist": false,
    "envName": "development",
    "oss": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/test/kibanaRoot/config",
  "configs": Array [
    "/some/other/path/some-kibana.yml",
  ],
  "homeDir": "/test/kibanaRoot",
  "logDir": "/test/kibanaRoot/log",
  "mode": Object {
    "dev": true,
    "name": "development",
    "prod": false,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 9007199254740991,
    "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
    "dist": false,
    "version": "v1",
  },
  "pluginSearchPaths": Array [
    "/test/kibanaRoot/src/plugins",
    "/test/kibanaRoot/x-pack/plugins",
    "/test/kibanaRoot/plugins",
    "/test/kibanaRoot/../kibana-extra",
  ],
  "repoPackages": undefined,
}
`;

exports[`correctly creates default environment if \`--env.name\` is supplied.: prod env properties 1`] = `
Env {
  "binDir": "/test/kibanaRoot/bin",
  "cliArgs": Object {
    "basePath": false,
    "cache": true,
    "dev": false,
    "disableOptimizer": true,
    "dist": false,
    "envName": "production",
    "oss": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/test/kibanaRoot/config",
  "configs": Array [
    "/some/other/path/some-kibana.yml",
  ],
  "homeDir": "/test/kibanaRoot",
  "logDir": "/test/kibanaRoot/log",
  "mode": Object {
    "dev": false,
    "name": "production",
    "prod": true,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 9007199254740991,
    "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
    "dist": false,
    "version": "v1",
  },
  "pluginSearchPaths": Array [
    "/test/kibanaRoot/src/plugins",
    "/test/kibanaRoot/x-pack/plugins",
    "/test/kibanaRoot/plugins",
    "/test/kibanaRoot/../kibana-extra",
  ],
  "repoPackages": undefined,
}
`;

exports[`correctly creates default environment in dev mode.: env properties 1`] = `
Env {
  "binDir": "/test/kibanaRoot/bin",
  "cliArgs": Object {
    "basePath": false,
    "cache": true,
    "dev": true,
    "disableOptimizer": true,
    "dist": false,
    "oss": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/test/kibanaRoot/config",
  "configs": Array [
    "/test/cwd/config/kibana.yml",
  ],
  "homeDir": "/test/kibanaRoot",
  "logDir": "/test/kibanaRoot/log",
  "mode": Object {
    "dev": true,
    "name": "development",
    "prod": false,
  },
  "packageInfo": Object {
    "branch": "some-branch",
    "buildNum": 9007199254740991,
    "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
    "dist": false,
    "version": "some-version",
  },
  "pluginSearchPaths": Array [
    "/test/kibanaRoot/src/plugins",
    "/test/kibanaRoot/x-pack/plugins",
    "/test/kibanaRoot/plugins",
    "/test/kibanaRoot/../kibana-extra",
  ],
  "repoPackages": undefined,
}
`;

exports[`correctly creates default environment in prod distributable mode.: env properties 1`] = `
Env {
  "binDir": "/test/kibanaRoot/bin",
  "cliArgs": Object {
    "basePath": false,
    "cache": true,
    "dev": false,
    "disableOptimizer": true,
    "dist": false,
    "oss": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/test/kibanaRoot/config",
  "configs": Array [
    "/some/other/path/some-kibana.yml",
  ],
  "homeDir": "/test/kibanaRoot",
  "logDir": "/test/kibanaRoot/log",
  "mode": Object {
    "dev": false,
    "name": "production",
    "prod": true,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 100,
    "buildSha": "feature-v1-build-sha",
    "dist": true,
    "version": "v1",
  },
  "pluginSearchPaths": Array [
    "/test/kibanaRoot/src/plugins",
    "/test/kibanaRoot/x-pack/plugins",
    "/test/kibanaRoot/plugins",
    "/test/kibanaRoot/../kibana-extra",
  ],
  "repoPackages": undefined,
}
`;

exports[`correctly creates default environment in prod non-distributable mode.: env properties 1`] = `
Env {
  "binDir": "/test/kibanaRoot/bin",
  "cliArgs": Object {
    "basePath": false,
    "cache": true,
    "dev": false,
    "disableOptimizer": true,
    "dist": false,
    "oss": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/test/kibanaRoot/config",
  "configs": Array [
    "/some/other/path/some-kibana.yml",
  ],
  "homeDir": "/test/kibanaRoot",
  "logDir": "/test/kibanaRoot/log",
  "mode": Object {
    "dev": false,
    "name": "production",
    "prod": true,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 9007199254740991,
    "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
    "dist": false,
    "version": "v1",
  },
  "pluginSearchPaths": Array [
    "/test/kibanaRoot/src/plugins",
    "/test/kibanaRoot/x-pack/plugins",
    "/test/kibanaRoot/plugins",
    "/test/kibanaRoot/../kibana-extra",
  ],
  "repoPackages": undefined,
}
`;

exports[`correctly creates environment with constructor.: env properties 1`] = `
Env {
  "binDir": "/some/home/dir/bin",
  "cliArgs": Object {
    "basePath": false,
    "cache": true,
    "dev": false,
    "disableOptimizer": true,
    "dist": false,
    "oss": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/some/home/dir/config",
  "configs": Array [
    "/some/other/path/some-kibana.yml",
  ],
  "homeDir": "/some/home/dir",
  "logDir": "/some/home/dir/log",
  "mode": Object {
    "dev": false,
    "name": "production",
    "prod": true,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 100,
    "buildSha": "feature-v1-build-sha",
    "dist": true,
    "version": "v1",
  },
  "pluginSearchPaths": Array [
    "/some/home/dir/src/plugins",
    "/some/home/dir/x-pack/plugins",
    "/some/home/dir/plugins",
    "/some/home/dir/../kibana-extra",
  ],
  "repoPackages": Array [
    "FakePackage1",
    "FakePackage2",
  ],
}
`;
